      appropriate to do so.  The old LinkCount policy was renamed
      LinkType, and the new policy enforcing link group directory
      counting is now called LinkCount.
    * The NormalizeCompression policy no longer causes an error if you
      have two files in the filesystem that differ only by the .gz or
      .bz2 extension.

   o Repository Changes
     * A new getConaryUrl() method has been implemented to support the
       "conary update-conary" feature
     * Exception handling has been re-worked.  All exception classes
       that are marshaled back to the client are now in the
       repository.errors module.  Some of the most commonly used
       exception classes have been included in their previous modules
       for compatibility until code can be modified to use the new
       repository.errors module.

Changes in 0.70.1:
  * Collection merging didn't handle (admittedly obscure) cases where 
    a component on the local system was updated to a new version of a
    trove, and updating that package also tries to update to that version
    but using a different path
  * Redirects are allowed in group cooking as long as the target of the 
    redirect is also specified in the group (this allows cleaner handling
    when trying to clean up after label multiplicity)
  * Shorten display for versions and flavors in internal debugging output.
    Make str() output for versions and flavors return formatted strings.
  * ELF files finding non-system libraries via an RPATH did not always
    have the path to the library encoded in their dependency requirement,
    depending on whether the package also included some other (unrelated)
    non-system library.  Futhermore, system paths encoded in an RPATH were
    incorrectly honored.  Both of these bugs have been fixed.
  * Ownership policy now uses macros in the user and group definitions.
  * Symbolic links to shared libraries can now provide path-encoded